--- a/style.css
+++ b/style.css
@@ -1,5 +1,47 @@
+
+h1 {
+  text-align: center;
+}
+
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+nav a {
+  background-color: burlywood;
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+
+#featured-property p {
+  width: 800px;
+  height: 80px;
+  margin-left: 200px;
+  text-align: center;
+}
+
+* {
+  text-align: center;
+}
+
+figcaption {
+  font-size: 16;
+}
+
+#details div {
+  float:left;
+  width: 25%;
+  background-color: darkcyan;
+  padding-left: 0%;
+  padding-right: 0%;
 }
